<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_cost_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/cost_of_services"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cost_of_services"
        app:srcCompat="@drawable/ic_store" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_of_services"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/cost_of_services"
        app:layout_constraintStart_toEndOf="@+id/icon_cost_of_service"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_services_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/icon_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/description_service_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/description_service_question"
        app:srcCompat="@drawable/ic_service" />

    <TextView
        android:id="@+id/description_service_question"
        style="@style/Widget.TipTime.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/how_was_a_service"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/icon_service"
        app:layout_constraintTop_toBottomOf="@+id/cost_of_services" />

    <RadioGroup
        android:id="@+id/quiz_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/twenty_percents"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/description_service_question"
        app:layout_constraintTop_toBottomOf="@+id/description_service_question">


        <RadioButton
            android:id="@+id/twenty_percents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing" />

        <RadioButton
            android:id="@+id/fifteen_percents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/better_then_good" />

        <RadioButton
            android:id="@+id/ten_percents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/norm" />
    </RadioGroup>

    <ImageView
        android:id="@+id/icon_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/round_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/round_switch"
        app:srcCompat="@drawable/ic_round_up" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/round_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/round_to_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon_tip"
        app:layout_constraintTop_toBottomOf="@+id/quiz_options" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/round_switch"
        app:layout_constraintTop_toBottomOf="@+id/round_switch" />

    <TextView
        android:id="@+id/tip_result"
        style="@style/Widget.TipTime.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_btn"
        android:layout_marginTop="8dp"
        tools:text="Tip Amount: $10" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>